Further deprecation removal
This makes another pass at warnings, eliminating unneeded conversions
in a few places.

Change-Id: I9b19289e104be890afbe0f0525b6efaba2bf4e55
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>